feat: hazelcast with no client network config