@@ -6,7 +6,9 @@ import com.hazelcast.core.Hazelcast;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
+import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 
 public class Server {
 
@@ -16,32 +18,36 @@ public class Server {
         logger.info("hz-config Server Starting ...");
         Config config = new Config();
 
-        // Logging Information
-        config.setProperty("hazelcast.logging.type", "slf4j");
-
         // Group Config
-
         GroupConfig groupConfig = new GroupConfig().setName("g10").setPassword("g10-pass");
         config.setGroupConfig(groupConfig);
 
         // Network Config
-
         MulticastConfig multicastConfig = new MulticastConfig();
 
         JoinConfig joinConfig = new JoinConfig().setMulticastConfig(multicastConfig);
 
         InterfacesConfig interfacesConfig = new InterfacesConfig()
-
-                .setInterfaces(Collections.singletonList("127.0.0.*"))
+                .setInterfaces(List.of("127.0.0.*"))
                 .setEnabled(true);
 
         NetworkConfig networkConfig = new NetworkConfig()
                 .setInterfaces(interfacesConfig)
                 .setJoin(joinConfig);
 
+//        NetworkConfig networkConfig = config.getNetworkConfig();
+//        networkConfig.setPort(5701).setPortCount(20);
+//        networkConfig.setPortAutoIncrement(true);
+//        JoinConfig join = networkConfig.getJoin();
+//        join.getMulticastConfig().setEnabled(false);
+//        join.getTcpIpConfig()
+//                .addMember("machine1")
+//                .addMember("localhost")
+//                .addMember("192.*.*.*").setEnabled(true);
+
         config.setNetworkConfig(networkConfig);
 
-//        // Management Center Config
+        // Management Center Config
 //        ManagementCenterConfig managementCenterConfig = new ManagementCenterConfig()
 //                .setUrl("http://localhost:32768/mancenter/")
 //                .setEnabled(true);
